# PP1

./: README.md  api.env  main.py  masks.py  pyproject.toml
bank_transactions/: main.py  test_data.json  transaction_filter.py  transaction_utils.py
src/: decorators.py  external_api.py  finance_reader.py  generators.py  processing.py  utils.py  widget.py
src/masks/: masks.py
test/: Test_API.py  test.py  test_.py  test_decor.py  test_finance_reader.py  test_masks.py  test_transaction_filter.py  test_transaction_utils.py
