[tool.poetry]
name = "dima"
version = "0.1.0"
description = ""
authors = ["Dima <zik871@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[tool.flake8]
max-line-length = 119
exclude = ".git,__pycache__"
